--- a/plaque_size_tool.desktop
+++ b/plaque_size_tool.desktop
@@ -2,7 +2,7 @@
 Name=Plaque Size Tool
 Comment=Count and size plaques
 Icon=/usr/share/pixmaps/openbox.xpm
-Exec=/usr/bin/python3 /home/pi/github/plaque_size_tool -i recent.jpg --small -p 90
+Exec=lxterminal -e "/usr/bin/python3 /home/pi/github/plaque_size_tool/gui.py -i recent.jpg --small -p 90"
 Type=Application
 Encoding=UTF-8
 Terminal=true
